--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "fixAll": "npm run format && npm run lintfix",
     "build": "gulp build",
     "dev": "gulp",
-    "fixAndBuild": "npm run fixAll && npm run build" 
+    "fixAndBuild": "npm run fixAll && npm run build",
+    "push": "git add . && git commit -m 'подготовили к публикации' && git push",
+    "lintfixAndPush": "npm run fixAll && git add . && git commit -m 'подготовили к публикации' && git push"
   },
   "author": "",
   "license": "ISC",
